<resources>
    <string name="app_name" translatable="false">Tripbd-Driver/Owner</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="hintWriteCityDistrict" translatable="false">
        <font size="25">Write City/District and select from popup</font>
    </string>
    <string-array name="vehicle_model">
        <item>Select Vehicle Model</item>
        <item>Akij Rofrof</item>
        <item>Ashok Layland</item>
        <item>Ashok Layland Dost </item>
        <item>Ashok Leyland Double Decker</item>
        <item>Ashok Leyland LYNX</item>
        <item>Ashok Leyland Stag 1212</item>
        <item>Ashok Leyland Tusker</item>
        <item>Ashol Leyland 1818</item>
        <item>BMW</item>
        <item>BMW 7 series</item>
        <item>BMW X3</item>
        <item>BMW X5</item>
        <item>DCM DYNA</item>
        <item>DFSK Glory</item>
        <item>Drum Truck</item>
        <item>Eicher</item>
        <item>Eicher</item>
        <item>Eicher 10.90</item>
        <item>Eicher 1060</item>
        <item>Eicher 1090</item>
        <item>Eicher 1212 K</item>
        <item>Eicher 190 L</item>
        <item>Eicher 20.16 Volvo</item>
        <item>Eicher 2015</item>
        <item>Eicher Disel</item>
        <item>Eicher pro</item>
        <item>Eicher Tipper</item>
        <item>Eicher Volvo</item>
        <item>Ford Ecosport</item>
        <item>Forland</item>
        <item>Forland T3</item>
        <item>Forland T5</item>
        <item>Foton </item>
        <item>Foton Microbus</item>
        <item>Foton TM</item>
        <item>Freedom</item>
        <item>Fuso BM 11 Turbo</item>
        <item>Havel Jolion</item>
        <item>Hijet Dehatsu</item>
        <item>Hina RG 197</item>
        <item>Hino 1 j</item>
        <item>Hino ak ji</item>
        <item>Hino drun truck</item>
        <item>Hino RC RB</item>
        <item>Hino RG 230</item>
        <item>Hino RK 260</item>
        <item>Hino RK230</item>
        <item>Hino rm2</item>
        <item>Hino RN-8 JSK</item>
        <item>Hino Truck</item>
        <item>Hino Urban AK 1 j</item>
        <item>Honda</item>
        <item>Honda Grace</item>
        <item>Honda Accord</item>
        <item>Honda Civic</item>
        <item>Honda CR-V</item>
        <item>Honda Fit</item>
        <item>Honda Insight</item>
        <item>Honda Vezel</item>
        <item>Hyundai</item>
        <item>Hyundai Accent</item>
        <item>Hyundai H1</item>
        <item>Hyundai Santafi</item>
        <item>Hyundai Sonata</item>
        <item>Hyundai Tourist bus</item>
        <item>Hyundai Tucson</item>
        <item>Issuzu LT 133P</item>
        <item>Isuzu </item>
        <item>Isuzu 4 jb</item>
        <item>Isuzu Dump Hidalik</item>
        <item>Isuzu FTR 33R</item>
        <item>Isuzu LT 133P</item>
        <item>Isuzu MT 134Q</item>
        <item>Isuzu NKR 55 L</item>
        <item>Isuzu NKR 552</item>
        <item>Isuzy LT</item>
        <item>Jac</item>
        <item>Jac Baureto</item>
        <item>Jac Enargepac</item>
        <item>Jac HFC</item>
        <item>Jac Turbo</item>
        <item>JMC</item>
        <item>JMC NH 720</item>
        <item>Jmc Regular</item>
        <item>Kia Sportage</item>
        <item>Mahindra</item>
        <item>Mahindra</item>
        <item>Mahindra Bolero</item>
        <item>Mahindra Jheeto</item>
        <item>Mahindra Maxximo</item>
        <item>Mahindra Torro</item>
        <item>Mahindro Supro</item>
        <item>MAN Tourist Bus</item>
        <item>Marcedes</item>
        <item>Marcedes Benz</item>
        <item>Maruti Suzuki</item>
        <item>Mazda</item>
        <item>Mazda</item>
        <item>Mazda Axela</item>
        <item>Mazda CX- 3</item>
        <item>Mistubishi Fuso FE71</item>
        <item>Mitsubishi</item>
        <item>Mitsubishi CANTER</item>
        <item>Mitsubishi Colt</item>
        <item>Mitsubishi Fuso</item>
        <item>Mitsubishi Gallant</item>
        <item>Mitsubishi Lancer</item>
        <item>Mitsubishi Mirage</item>
        <item>Mitsubishi Outlandish</item>
        <item>Mitsubishi Pajero</item>
        <item>Mitsubishi Rosa</item>
        <item>Nissan</item>
        <item>Nissan Caravan</item>
        <item>Nissan Cefiro</item>
        <item>Nissan Civilian</item>
        <item>Nissan DAYZ-ROOX</item>
        <item>Nissan DAYZ-ROOX</item>
        <item>Nissan Juke</item>
        <item>Nissan Navara</item>
        <item>Nissan Patrol</item>
        <item>Nissan Sunny</item>
        <item>Nissan Urvan</item>
        <item>Nissan Vanette</item>
        <item>Nissan X-Trail</item>
        <item>Suzuki</item>
        <item>Suzuki Alto</item>
        <item>Suzuki APV</item>
        <item>Suzuki Ciaz</item>
        <item>Suzuki Omni</item>
        <item>Suzuki Wagon</item>
        <item>Tata</item>
        <item>Tata 1512 FC</item>
        <item>Tata 1616</item>
        <item>Tata 207 DI Rx</item>
        <item>Tata Ace</item>
        <item>Tata Ace EX2</item>
        <item>Tata ACE Mega</item>
        <item>Tata Bus</item>
        <item>Tata Bus 42</item>
        <item>Tata Bus 42</item>
        <item>Tata Deer Ex</item>
        <item>Tata EX2</item>
        <item>Tata Gold</item>
        <item>Tata HT2</item>
        <item>Tata Indigo</item>
        <item>Tata INTRA V-10</item>
        <item>Tata King</item>
        <item>Tata LP 407</item>
        <item>Tata LP 709</item>
        <item>Tata LP 712</item>
        <item>Tata LP 909</item>
        <item>Tata LPK</item>
        <item>Tata LPO 1316</item>
        <item>Tata LPO 1512</item>
        <item>Tata LPO 1515</item>
        <item>Tata LPO 1618</item>
        <item>Tata Mega EX2</item>
        <item>Tata Mega XL</item>
        <item>Tata Starbus School</item>
        <item>Tata Super Ace</item>
        <item>Tata TC 1109</item>
        <item>Tata TC 1510</item>
        <item>Tata Xenon</item>
        <item>Tiking</item>
        <item>Toyota</item>
        <item>Toyota</item>
        <item>Toyota 2C</item>
        <item>Toyota Allion</item>
        <item>Toyota Aqua</item>
        <item>Toyota Auris</item>
        <item>Toyota Avanza</item>
        <item>Toyota Axio Fielder</item>
        <item>Toyota Camry</item>
        <item>Toyota Carina</item>
        <item>Toyota C-HR</item>
        <item>Toyota coaster</item>
        <item>Toyota Corolla</item>
        <item>Toyota Corsa</item>
        <item>Toyota Crown</item>
        <item>Toyota Duet</item>
        <item>Toyota DYNA</item>
        <item>Toyota Dyna</item>
        <item>Toyota Esquire</item>
        <item>Toyota Fielder</item>
        <item>Toyota Fortuner</item>
        <item>Toyota Harrier</item>
        <item>Toyota Hias</item>
        <item>Toyota Hias DX</item>
        <item>Toyota Hias Freezer</item>
        <item>Toyota Hias GL</item>
        <item>Toyota Hias Grand Cabin</item>
        <item>Toyota Hias Super GL</item>
        <item>Toyota Highlander</item>
        <item>Toyota Hilux</item>
        <item>Toyota ist</item>
        <item>Toyota Kluger</item>
        <item>Toyota Land Cruiser</item>
        <item>Toyota LC 200</item>
        <item>Toyota Liteace</item>
        <item>Toyota M. Crop</item>
        <item>Toyota Mark</item>
        <item>Toyota Mini coaster</item>
        <item>Toyota Navara</item>
        <item>Toyota Noah</item>
        <item>Toyota passo</item>
        <item>Toyota Platz</item>
        <item>Toyota prado</item>
        <item>Toyota premio</item>
        <item>Toyota Prius</item>
        <item>Toyota probox</item>
        <item>Toyota Ractis</item>
        <item>Toyota Ragius</item>
        <item>Toyota RAV 4</item>
        <item>Toyota Rush</item>
        <item>Toyota Spacio</item>
        <item>Toyota Starlet</item>
        <item>Toyota Succeeed</item>
        <item>Toyota Townance</item>
        <item>Toyota Vios</item>
        <item>Toyota Vista</item>
        <item>Toyota Vitz</item>
        <item>Toyota Voxy</item>
        <item>Toyota Yaris</item>
        <item>Volvo Tourist bus</item>
        <item>Fuso</item>
        <item>Emma</item>
        <item>Suzuki Super Carry</item>

        <item>Suzuki Ravi</item>
        <item>Jac HFC1020KN/KND</item>
        <item>Jac HFC1021K</item>
        <item>Isuzu D-Max</item>
        <item>Tata Prima LX</item>
        <item>Ashok Leyland Taurus</item>
        <item>Ford</item>
        <item>Volvo</item>
        <item>Bharat Benze</item>
        <item>Refrezerator Van</item>
        <item>Tata Intra V10</item>
        <item>Ashok Leyland Ecomet</item>

    </string-array>
    <string-array name="pickupSize">
        <item>7 feet 1 Ton</item>
        <item>7 feet 1 Ton</item>
        <item>9 feet 1.5 Ton</item>
        <item>9 feet 1.5 Ton</item>
        <item>12 feet 2 Ton</item>
        <item>12 feet 2 Ton</item>
        <item>12 feet 3 Ton</item>
        <item>12 feet 3 Ton</item>
    </string-array>
    <string-array name="truckSize">
        <item>13 feet 1.5 Ton -light weight</item>
        <item>13 feet 1.5 Ton -light weight</item>
        <item>14 feet 3.5 Ton -light weight</item>
        <item>14 feet 3.5 Ton -light weight</item>
        <item>16 feet 3.5 Ton -light weight</item>
        <item>16 feet 3.5 Ton covered -light weight</item>
        <item>16 feet 5 Ton -medium weight</item>
        <item>16 feet 5 Ton -medium weight</item>
        <item>16 feet 8.5 Ton -medium weight</item>
        <item>16 feet 8.5 Ton -medium weight</item>
        <item>20 feet 5.5 Ton -medium weight</item>
        <item>20 feet 5.5 Ton -medium weight</item>
        <item>19.5 feet 7.5 Ton -medium weight</item>
        <item>19.5 feet 7.5 Ton -medium weight</item>
        <item>24 feet 8 Ton -medium weight</item>
        <item>32 feet 7.5 Ton -medium weight</item>
        <item> 14 feet 15 Ton -heavy weight</item>
        <item>17.5 feet 9 Ton -heavy weight</item>
        <item>20 feet 11 Ton -heavy weight</item>
        <item>20 feet 15 Ton -heavy weight</item>
        <item>22 feet 19 Ton -heavy weight</item>
        <item>23 feet 20 Ton -heavy weight</item>
        <item>23 feet 25 Ton -heavy weight</item>
        <item>24 feet 25 Ton -heavy weight</item>
        <item> 28 feet 30 Ton -heavy weight</item>
        <item>20 feet 16 Ton -heavy weight</item>
        <item>24 feet 16 Ton -heavy weight</item>
        <item>32 feet 16 Ton -heavy weight</item>

    </string-array>
    <string-array name="trailerSize">
        <item>10 wheel 30 Ton flatbed</item>
        <item>14 wheel 40 Ton flatbed</item>
        <item>18 wheel 47 Ton flatbed</item>
        <item>22 wheel 49Ton flatbed</item>
        <item>26 wheel 52 Ton flatbed</item>
        <item>40 feet 33 Ton flatbed</item>
        <item>40 feet 34 Ton flatbed</item>
        <item>10 wheel 30 Ton lowbed</item>
        <item>14 wheel 40 Ton lowbed</item>
        <item>18 wheel 47 Ton lowbed</item>
        <item>22 wheel 49Ton lowbed</item>
        <item>26 wheel 52 Ton lowbed</item>
        <item>40 feet 33 Ton lowbed</item>
        <item>40 feet 34 Ton lowbed</item>
        <item>45 Feet 31 Ton box</item>

    </string-array>
<string name="all_trip">All Trip</string>
<string name="running_trip">Running Trip</string>
<string name="profile">profile</string>
<string name="Fr">Fr</string>
<string name="to">to</string>
<string name="click_to_filter">click to filter</string>
    <string name="phone_number_01xxxxxxxxx">Phone Number (01xxxxxxxxx)</string>
    <string name="country_code">Country Code</string>
    <string name="_88">+88</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="reset_password">Reset password</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_new_password">Enter new password</string>
</resources>