<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResetPasswordActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/signin_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/signin_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Log In"
            app:titleTextColor="@color/white"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/signin_appbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >


            <ImageView
                android:id="@+id/imgv_sign_in"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_launcher_foreground" />


            <LinearLayout
                android:id="@+id/ly_phone_number"
                android:layout_below="@+id/imgv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_country_code"
                    android:hint="@string/country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="150dp"
                    app:startIconTint="@color/black"
                    app:endIconTint="@color/black"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_call_black_24dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="wrap_content"
                        android:textColor="@color/black"
                        android:inputType="phone"
                        android:text="@string/_88"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_phone_number"
                    android:hint="@string/phone_number_01xxxxxxxxx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="250dp"
                    app:startIconTint="@color/black"
                    app:endIconTint="@color/black"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:textColor="@color/black"
                        android:inputType="phone"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:visibility="gone"
                android:id="@+id/textInputLayout_enter_otp"
                android:layout_below="@+id/ly_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_the_otp"
                app:startIconDrawable="@drawable/ic_password_black_24dp"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:startIconTint="@color/black"
                app:endIconTint="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:visibility="gone"
                android:id="@+id/textInputLayout_new_password"
                android:layout_below="@+id/textInputLayout_enter_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_new_password"
                app:startIconDrawable="@drawable/ic_password_black_24dp"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:startIconTint="@color/black"
                app:endIconTint="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send_otp"
                android:layout_marginTop="20dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textInputLayout_new_password"
                android:text="@string/send_otp"
                android:textAllCaps="false"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reset_password"
                android:visibility="gone"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textInputLayout_new_password"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                />


        </RelativeLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/reset_progressbar"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>